--- a/options.html
+++ b/options.html
@@ -16,6 +16,8 @@
       <input type="checkbox" name="showTitles" id="showTitles" />
     </div>
 
+    <div class="row" id="iconsContainer"></div>
+
     <div class="row">
       <div id="status"></div>
       <button id="save">Save</button>
