Options working now (with some initialization errors, it looks like). Modularized vars to vars.js. Cleaner UI in options.

--- a/options.html
+++ b/options.html
@@ -4,7 +4,7 @@
     <title>HTML Form with Checkbox, Dropdown, and Textbox</title>
     <link rel="stylesheet" href="options.css" />
   </head>
-  <body>
+  <body class="optionsBody">
     <h2>Gmail Navbar Shortcuts Options</h2>
     <div class="row">
       <label for="color">Color (leave empty for default grey): </label>
@@ -12,16 +12,26 @@
     </div>
 
     <div class="row">
-      <label for="showTitles">Show Titles</label>
+      <label for="showTitles"
+        >Show Titles (unchecking titles can fit more icons)</label
+      >
       <input type="checkbox" name="showTitles" id="showTitles" />
     </div>
 
+    <div class="row">
+      A few preselected icons are available. You cannot add your own icons, as
+      of now. Paste in the url you want and the title. The checkbox lets you
+      choose whether you want the link displayed.
+    </div>
     <div class="row" id="iconsContainer"></div>
 
     <div class="row">
       <div id="status"></div>
       <button id="save">Save</button>
+      <button id="reset">Reset</button>
     </div>
+    <script src="svgs.js"></script>
+    <script src="vars.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
