loading elements and content after dom and elements are loaded.

--- a/options.html
+++ b/options.html
@@ -21,9 +21,9 @@
         placeholder="#444746"
       />
       <span> | Choose from: </span>
-      <span class="box grey" id="grey-box">#444746</span>
-      <span class="box white" id="white-box">#ffffff</span>
-      <span class="box black" id="black-box">#000000</span>
+      <span class="box grey" id="grey-box"> grey </span>
+      <span class="box white" id="white-box"> white </span>
+      <span class="box black" id="black-box"> black </span>
       <span>  </span>
     </span>
 
